# OSG-OpenCV-ARDemo

./: CMakeLists.txt  README.md  main.cpp
include/: ARCamera.cpp  ARCamera.h  BackgroundCamera.cpp  BackgroundCamera.h  VirtualCamera.cpp  VirtualCamera.h
